dist_man1_MANS=

if BUILD_CRYPTOTALKCOIND
  dist_man1_MANS+=cryptotalkcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=cryptotalkcoin-qt.1
endif

if BUILD_CRYPTOTALKCOIN_CLI
  dist_man1_MANS+=cryptotalkcoin-cli.1
endif

if BUILD_CRYPTOTALKCOIN_TX
  dist_man1_MANS+=cryptotalkcoin-tx.1
endif

if ENABLE_WALLET
if BUILD_CRYPTOTALKCOIN_WALLET
  dist_man1_MANS+=cryptotalkcoin-wallet.1
endif
endif
